<resources>
    <string name="app_name">SideBarSmartApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--menu more-->
    <string name="more_fag">FAQ</string>
    <string name="more_fag_des">Temukan informasi yang kamu butuhkan</string>
    <string name="more_tips">Tips Keamanan</string>
    <string name="more_tips_des">Jaga keamanan akun kamu</string>
    <string name="more_phone">Hubungi Kami</string>
    <string name="more_phone_des">24/7 Call CommBank akan siap melayani kebutuhanmu</string>
    <string name="more_term">Kebijakan Privasi</string>
    <string name="more_term_des">Pahami bagaimana kami menjaga privasi Kamu</string>
    <string name="more_disclaim">Disclaimer</string>
    <string name="more_disclaim_des">Kenali lebih lanjut disclaimer dalam aplikasi ini</string>
    <string name="more_about">Tentang Aplikasi</string>
    <string name="more_about_des">Versi dan informasi lain mengenai aplikasi</string>
    <string name="more_password">Ubah Password</string>
    <string name="more_password_des">Ubah kata sandi untuk masuk ke aplikasi</string>
    <string name="more_pin">Ubah PIN</string>
    <string name="more_pin_des">Ubah kata sandi untuk bertransaksi</string>
    <string name="more_logout">Log Out</string>
    <string name="more_logout_des">Keluar dari aplikasi ini dengan aman</string>

    <!--profile screen-->
    <string name="profile_my_account">Nomor Rekening Saya</string>
    <string name="profile_user_name">Username</string>
    <string name="profile_my_phone">Nomor HP</string>
    <string name="profile_my_email">Email</string>
    <string name="profile_my_address">Alamat Domisili</string>
    <string name="profile_load_fail_mes">Gagal mengambil data Kamu.</string>
    <string name="profile_load_fail_mes_2">Pastikan kamu terkoneksi ke jaringan internet kemudian coba lagi.</string>
</resources>
